--- a/snprc_genetics/module.properties
+++ b/snprc_genetics/module.properties
@@ -1,2 +1,2 @@
 ModuleClass: org.labkey.snprc_genetics.SNPRC_GeneticsModule
-ModuleDependencies: Laboratory, SNPRC_EHR
+ModuleDependencies: SNPRC_EHR
