--- a/module.properties
+++ b/module.properties
@@ -1,5 +1,5 @@
 ModuleClass: org.labkey.snprc_genetics.SNPRC_GeneticsModule
-ModuleDependencies: SNPRC_EHR, Laboratory
+ModuleDependencies: SNPRC_EHR
 SupportedDatabases: mssql
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
