--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -1,4 +1,4 @@
-import org.labkey.gradle.util.BuildUtils;
+import org.labkey.gradle.util.BuildUtils
 
 repositories
         {
@@ -8,6 +8,8 @@ dependencies
         {
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:customModules:ehr", depProjectConfig: "apiCompile")
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
+            compile project(":server:modules:query")
+
         }
 
 task('metadataStudyArchive', type: Zip, group: "Data", description: "Assemble study archive with dataset metadata") {
