--- a/snprc_ehr/module.properties
+++ b/snprc_ehr/module.properties
@@ -1,5 +1,5 @@
 ModuleClass: org.labkey.snprc_ehr.SNPRC_EHRModule
-ModuleDependencies: LDK, EHR
+ModuleDependencies: LDK, EHR, SND
 SupportedDatabases: mssql
 ConsolidateScripts: false
 ManageVersion: false
