--- a/snprc_ehr/resources/etls/package.xml
+++ b/snprc_ehr/resources/etls/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<etl xmlns="http://labkey.org/etl/xml" standalone="false">
+<etl xmlns="http://labkey.org/etl/xml" standalone="true">
     <name>_SNPRC Packages</name>
     <description>Packages (coded procs)</description>
     <transforms>
