--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -10,6 +10,7 @@ dependencies
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:customModules:snd", depProjectConfig: "apiCompile")
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
             compile project(":server:modules:query")
+            BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:dataintegration", depProjectConfig: "apiCompile")
 
         }
 
