Copyright and license updates   -- Add license file to non-module repos   -- Add license file to all Apache repos (since it shows in the GitHub UI)   -- Change two licenses to LabKey license   -- Remove two license files that are no longer correct   -- Add licenses to many module.properties files

--- a/snprc_ehr/module.properties
+++ b/snprc_ehr/module.properties
@@ -3,3 +3,5 @@ ModuleDependencies: LDK, EHR, SND, DataIntegration
 SupportedDatabases: mssql
 ConsolidateScripts: false
 ManageVersion: false
+License: Apache 2.0
+LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
