--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "better-npm-run build:jest-test",
     "watch": "better-npm-run build:watch",
     "clean": "better-npm-run clean",
     "build-prod": "npm run build",
@@ -18,6 +18,12 @@
         "NODE_ENV": "development"
       }
     },
+    "build:jest-test": {
+      "command": "jest",
+      "env": {
+        "NODE_ENV": "test"
+      }
+    },
     "build:prod": "",
     "build:watch": {
       "command": "webpack-dev-server --open --config ./webpack/dev-server.config.js",
@@ -29,19 +35,24 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "better-npm-run": "^0.1.1",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "fullcalendar": "^3.9.0",
     "fullcalendar-reactwrapper": "^1.0.7",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
@@ -55,6 +66,7 @@
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
