--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -19,7 +19,7 @@
       }
     },
     "build:jest-test": {
-      "command": "jest",
+      "command": "jest --config=jest.config.json",
       "env": {
         "NODE_ENV": "test"
       }
@@ -48,6 +48,7 @@
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-to-json": "^3.3.5",
     "fullcalendar": "^3.9.0",
     "fullcalendar-reactwrapper": "^1.0.7",
     "html-loader": "^0.5.5",
@@ -71,5 +72,8 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "raf": "^3.4.1"
   }
 }
