Update module.properties ConsolidateScripts and ManageVersion
snprc_ehr, snprc_genetics, snprc_r24 all set ConsolidateScripts and ManageVersion to true.  snprc_scheduler set those values to false for now while more active development.

--- a/snprc_genetics/module.properties
+++ b/snprc_genetics/module.properties
@@ -3,5 +3,5 @@ ModuleDependencies: SNPRC_EHR, Laboratory
 SupportedDatabases: mssql
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
-ConsolidateScripts: false
-ManageVersion: false
+ConsolidateScripts: true
+ManageVersion: true
