--- a/snprc_ehr/module.properties
+++ b/snprc_ehr/module.properties
@@ -1,7 +1,7 @@
 ModuleClass: org.labkey.snprc_ehr.SNPRC_EHRModule
 ModuleDependencies: LDK, EHR, SND, DataIntegration
 SupportedDatabases: mssql
-ConsolidateScripts: false
-ManageVersion: false
+ConsolidateScripts: true
+ManageVersion: true
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
