--- a/snprc_r24/module.properties
+++ b/snprc_r24/module.properties
@@ -3,5 +3,5 @@ Label: Marmoset R24 module
 SupportedDatabases: mssql
 License: Apache 2.0
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
-ConsolidateScripts: false
-ManageVersion: false
+ConsolidateScripts: true
+ManageVersion: true
