--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ assaydata
 /snprc_ehr/resources/referenceStudy/kinship.txt
 snprc_scheduler/resources/web/snprc_scheduler/app/app.js
 /snprc_ehr/resources/referenceStudy/*.log
+app
+/snprc_scheduler/resources/web/snprc_scheduler/app
+snprc_scheduler/resources/web/snprc_scheduler/app/app.js
+*.iml
