--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -13,7 +13,9 @@
     "test": "better-npm-run build:jest-test"
   },
   "betterScripts": {
-    "clean": "echo build cleaned",
+    "clean": {
+      "command": "rimraf resources/web/snprc_scheduler/app"
+    },
     "build:jest-test": {
       "command": "jest --config=jest.config.json",
       "env": {
@@ -30,6 +32,12 @@
       "command": "webpack --config webpack/dev-style.config.js --progress",
       "env": {
         "NODE_ENV": "development"
+      }
+    },
+    "build:jest-teamcity": {
+      "command": "jest --testResultsProcessor=jest-teamcity-reporter",
+      "env": {
+        "NODE_ENV": "test"
       }
     },
     "build:watch": {
@@ -62,6 +70,7 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
+    "jest-teamcity-reporter": "0.9.0",
     "lodash": "4.17.11",
     "mini-css-extract-plugin": "0.5.0",
     "react-hot-loader": "4.3.12",
