--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -62,8 +62,8 @@
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "better-npm-run": "0.1.1",
-    "css-loader": "1.0.1",
     "css-hot-loader": "1.4.2",
+    "css-loader": "1.0.1",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "enzyme-to-json": "3.3.5",
@@ -85,14 +85,17 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "bootstrap": "4.1.3",
+    "font-awesome": "4.7.0",
     "fullcalendar": "3.9.0",
     "fullcalendar-reactwrapper": "1.0.7",
+    "immutable": "4.0.0-rc.12",
     "prop-types": "15.6.2",
     "react": "16.6.0",
-    "react-accessible-accordion": "2.4.5",
     "react-bootstrap": "0.32.4",
-    "react-data-grid": "4.0.8",
-    "react-data-grid-addons": "4.0.8",
+    "react-data-grid": "5.0.5",
+    "react-data-grid-addons": "5.0.5",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "7.0.2",
     "react-dom": "16.6.0",
     "react-redux": "5.1.0",
     "react-router-dom": "4.3.1",
