--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -96,6 +96,7 @@
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-bootstrap": "0.32.4",
+    "react-bootstrap-table": "4.3.1",
     "react-data-grid": "5.0.5",
     "react-data-grid-addons": "5.0.5",
     "react-dnd": "7.0.2",
