--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
+import org.labkey.gradle.util.BuildUtils
 import org.labkey.gradle.util.ModuleFinder
 
 subprojects {
   Project p ->
     if (ModuleFinder.isPotentialModule(p))
     {
-        p.evaluationDependsOn(":server:api")
+        p.evaluationDependsOn(BuildUtils.getApiProjectPath(p.gradle))
         apply plugin: 'java'
         apply plugin: 'org.labkey.module'
     }
