--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -9,7 +9,7 @@ dependencies
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:customModules:ehr", depProjectConfig: "apiCompile")
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiCompile")
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
-            compile project(":server:modules:query")
+            compile project( BuildUtils.getPlatformModuleProjectPath(project.gradle, "query"))
             BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:optionalModules:dataintegration", depProjectConfig: "apiCompile")
 
         }
