--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -83,10 +83,11 @@
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.12",
-    "@fortawesome/free-solid-svg-icons": "5.6.3",
+    "@fortawesome/fontawesome-svg-core": "1.2.17",
+    "@fortawesome/free-solid-svg-icons": "5.8.1",
+    "@fortawesome/free-regular-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
-    "@fortawesome/fontawesome-free": "5.6.3",
+    "@fortawesome/fontawesome-free": "5.8.1",
     "babel-polyfill": "6.26.0",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
@@ -94,14 +95,15 @@
     "fullcalendar-reactwrapper": "1.0.7",
     "immutable": "4.0.0-rc.12",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
+    "react": "16.8.6",
     "react-bootstrap": "0.32.4",
     "react-bootstrap-table": "4.3.1",
-    "react-data-grid": "5.0.5",
+    "react-data-grid": "6.1.0",
     "react-data-grid-addons": "5.0.5",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
-    "react-dom": "16.6.0",
+    "react-dom": "16.8.6",
+    "react-moment": "0.9.2",
     "react-redux": "5.1.0",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
