--- a/snprc_scheduler/build.gradle
+++ b/snprc_scheduler/build.gradle
@@ -2,7 +2,7 @@ import org.labkey.gradle.util.BuildUtils
 
 dependencies {
     BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiCompile")
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:customModules:ehr", depProjectConfig: "apiCompile")
+    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiCompile")
     BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
     compile project( BuildUtils.getPlatformModuleProjectPath(project.gradle, "query"))
 }
