--- a/snprc_r24/build.gradle
+++ b/snprc_r24/build.gradle
@@ -1,8 +1,8 @@
 import org.labkey.gradle.util.GroupNames
 
 task('metadataStudyArchive', type: Zip, group: "Data", description: "Assemble study archive with dataset metadata") {
-    archiveName 'snprc_r24_metadata.zip'
-    destinationDir = project.file("${project.labkey.explodedModuleDir}/archives")
+    archiveFileName.set('snprc_r24_metadata.zip')
+    destinationDirectory = project.file("${project.labkey.explodedModuleDir}/archives")
     from("resources/referenceStudy/") {
         include "study.xml"
         include "datasets/*"
@@ -12,8 +12,8 @@ task('metadataStudyArchive', type: Zip, group: "Data", description: "Assemble st
 project.tasks.module.dependsOn(project.tasks.metadataStudyArchive)
 
 task('datasetStudyArchive', type: Zip, group: "Data", description: "Assemble study archive with dataset data") {
-    archiveName 'snprc_r24.zip'
-    destinationDir = project.file("${project.labkey.explodedModuleDir}/archives")
+    archiveFileName.set( 'snprc_r24.zip')
+    destinationDirectory = project.file("${project.labkey.explodedModuleDir}/archives")
     from("resources/referenceStudy/") {
         include "study.xml"
         include "datasets/*"
@@ -46,9 +46,9 @@ project.task("transformJar",
         {Jar jar ->
             jar.from project.sourceSets.transform.output
             jar.from { configurations.transformCompile.collect { it.isDirectory() ? it : zipTree(it) }}
-            jar.baseName = "MicrobiomeTransform"
-            jar.classifier = "transform"
-            jar.destinationDir = new File(project.buildDir, "artifacts/snprc")
+            jar.archiveBaseName.set("MicrobiomeTransform")
+            jar.archiveClassifier.set("transform")
+            jar.destinationDirectory = new File(project.buildDir, "artifacts/snprc")
             jar.manifest {
                 attributes "Main-Class": "MicrobiomeTransform"
             }
