Update build files to remove some deprecated properties and configurations (#187)
* Remove use of deprecated compile configuration and various archive properties;
Add explicit dependency on jars that no longer come through the api classpath;
Remove redundant dependency on query module (already added by module plugin)
* Remove reference to deprecated transformCompile configuration in favor of resolvable transformJars configuration
* Replace deprecated compile configuration with implementation
* Replace deprecated apiCompile configuration with new apiJarFile (and apiElements in some cases)

--- a/snprc_scheduler/build.gradle
+++ b/snprc_scheduler/build.gradle
@@ -1,9 +1,9 @@
 import org.labkey.gradle.util.BuildUtils
 
 dependencies {
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiCompile")
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiCompile")
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiCompile")
-    compile project( BuildUtils.getPlatformModuleProjectPath(project.gradle, "query"))
+    implementation "commons-lang:commons-lang:${commonsLangVersion}"
+    BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiJarFile")
+    BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiJarFile")
+    BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiJarFile")
 }
 
