--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -2,17 +2,18 @@ import org.labkey.gradle.util.BuildUtils
 
 dependencies
         {
-            BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiCompile")
-            BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiCompile")
-            BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiCompile")
-            compile project( BuildUtils.getPlatformModuleProjectPath(project.gradle, "query"))
-            BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:optionalModules:dataintegration", depProjectConfig: "apiCompile")
+            BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiJarFile")
+            BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiJarFile")
+            BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiJarFile")
+            implementation "com.sun.mail:jakarta.mail:${javaMailVersion}"
+            implementation "commons-lang:commons-lang:${commonsLangVersion}"
+            BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:optionalModules:dataintegration", depProjectConfig: "apiJarFile")
 
         }
 
 task('metadataStudyArchive', type: Zip, group: "Data", description: "Assemble study archive with dataset metadata") {
-   archiveName 'snprc_study_metadata.zip'
-   destinationDir = project.file("${project.labkey.explodedModuleDir}/archives")
+   archiveFileName.set('snprc_study_metadata.zip')
+   destinationDirectory = project.file("${project.labkey.explodedModuleDir}/archives")
    from("resources/referenceStudy/") {
       include "study.xml"
       include "datasets/*"
@@ -22,8 +23,8 @@ task('metadataStudyArchive', type: Zip, group: "Data", description: "Assemble st
 project.tasks.module.dependsOn(project.tasks.metadataStudyArchive)
 
 task('datasetStudyArchive', type: Zip, group: "Data", description: "Assemble study archive with dataset data") {
-   archiveName 'snprc_study.zip'
-   destinationDir = project.file("${project.labkey.explodedModuleDir}/archives")
+   archiveFileName.set('snprc_study.zip')
+   destinationDirectory = project.file("${project.labkey.explodedModuleDir}/archives")
    from("resources/referenceStudy/") {
       include "study.xml"
       include "datasets/*"
