--- a/snprc_genetics/build.gradle
+++ b/snprc_genetics/build.gradle
@@ -11,24 +11,32 @@ sourceSets {
 }
 
 dependencies {
-    transformCompile "org.apache.poi:poi:${poiVersion}"
-    transformCompile "org.apache.poi:poi-ooxml:${poiVersion}"
-    transformCompile "org.apache.poi:poi-ooxml-schemas:${poiVersion}"
-    transformCompile "org.apache.pdfbox:pdfbox:${pdfboxVersion}"
-    transformCompile "com.google.guava:guava:${guavaVersion}"
-    transformCompile "org.apache.commons:commons-collections4:${commonsCollections4Version}"
+    transformImplementation "org.apache.poi:poi:${poiVersion}"
+    transformImplementation "org.apache.poi:poi-ooxml:${poiVersion}"
+    transformImplementation "org.apache.poi:poi-ooxml-schemas:${poiVersion}"
+    transformImplementation "org.apache.pdfbox:pdfbox:${pdfboxVersion}"
+    transformImplementation "com.google.guava:guava:${guavaVersion}"
+    transformImplementation "org.apache.commons:commons-collections4:${commonsCollections4Version}"
+}
+
+configurations {
+    transformJars {
+        canBeResolved = true
+        extendsFrom(transformImplementation)
+    }
 }
 
 project.task("transformJar",
-                group: GroupNames.BUILD,
-                type: Jar,
-                description: "Create the genetics transform jar file",
-                {Jar jar ->
-                    jar.from project.sourceSets.transform.output
-                    jar.from { configurations.transformCompile.collect { it.isDirectory() ? it : zipTree(it) }}
-                    jar.baseName "GeneticsTransform"
-                    jar.destinationDir = new File(project.buildDir, "artifacts/snprc")
-                }
-        )
+    group: GroupNames.BUILD,
+    type: Jar,
+    description: "Create the genetics transform jar file",
+    {Jar jar ->
+        jar.from project.sourceSets.transform.output
+        jar.from { configurations.transformJars.collect { it.isDirectory() ? it : zipTree(it) }}
+        jar.duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+        jar.archiveBaseName.set("GeneticsTransform")
+        jar.destinationDirectory = new File(project.buildDir, "artifacts/snprc")
+    }
+)
 
 project.tasks.module.dependsOn(project.tasks.transformJar)
