1. React setup for snprc_ehr module 2. Two React test pages (HelloApp and HelloWorld) to test tsx and jsx configurations NOTE: the test pages will likely be removed at a later date.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ app
 /snprc_scheduler/resources/web/snprc_scheduler/app
 snprc_scheduler/resources/web/snprc_scheduler/app/app.js
 *.iml
+/snprc_ehr/resources/web/gen
