--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -28,15 +28,24 @@
     }
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "@labkey/api": "0.0.45",
     "@types/react": "16.8.19",
-    "@types/react-bootstrap": "0.32.19",
+    "@types/react-bootstrap": "1.0.1",
     "@types/react-dom": "16.8.4",
     "babel-jest": "^25.5.1",
+    "bootstrap": "^4.4.1",
     "immutable": "3.8.2",
+    "moment": "^2.25.3",
     "react": "16.8.6",
-    "react-bootstrap": "0.32.4",
-    "react-dom": "16.8.6"
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table": "^4.3.1",
+    "react-data-grid": "^7.0.0-canary.16",
+    "react-data-grid-addons": "^7.0.0-alpha.24",
+    "react-dom": "16.8.6",
+    "react-moment": "^0.9.7",
+    "react-select": "^3.1.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
