--- a/snprc_scheduler/build.gradle
+++ b/snprc_scheduler/build.gradle
@@ -2,7 +2,7 @@ import org.labkey.gradle.util.BuildUtils
 
 dependencies {
     implementation "commons-lang:commons-lang:${commonsLangVersion}"
-    BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:optionalModules:snd", depProjectConfig: "apiJarFile")
+    BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:snd", depProjectConfig: "apiJarFile")
     BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiJarFile")
     BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiJarFile")
 }
