--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -30,14 +30,15 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@labkey/api": "0.0.45",
-    "@labkey/components": "^0.56.3",
     "@types/react": "16.8.19",
-    "@types/react-bootstrap": "0.32.21",
+    "@types/react-bootstrap": "1.0.1",
     "@types/react-dom": "16.8.4",
     "babel-jest": "^25.5.1",
+    "bootstrap": "^4.4.1",
     "immutable": "3.8.2",
     "moment": "^2.25.3",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.1",
     "react-bootstrap-table": "^4.3.1",
     "react-data-grid": "^7.0.0-canary.16",
     "react-data-grid-addons": "^7.0.0-alpha.24",
@@ -73,7 +74,6 @@
     "mini-css-extract-plugin": "0.7.0",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
-    "react-bootstrap": "0.33.1",
     "react-hot-loader": "4.8.8",
     "react-test-renderer": "16.9.0",
     "resolve-url-loader": "3.1.0",
