Work in progress: - Downgraded react-bootstrap to ver. 0.33.1 - Added Acquisition panel - some styling - added @labkey/components to module

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ snprc_ehr/cmd-here.exe
 snprc_ehr/resources/referenceStudy/*.xlsx
 snprc_ehr/resources/web/snprc_ehr/snprcReports.js.gz
 snprc_ehr/resources/web/snprc_ehr/gen/*
+snprc_mobile
+
