--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -42,6 +42,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-data-grid": "^7.0.0-canary.16",
     "react-data-grid-addons": "^7.0.0-alpha.24",
+    "react-datepicker": "^2.15.0",
     "react-dom": "16.8.6",
     "react-moment": "^0.9.7",
     "react-select": "^3.1.0",
@@ -56,6 +57,7 @@
     "@hot-loader/react-dom": "16.9.0",
     "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-hot-loader": "4.1.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
