--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -28,7 +28,7 @@
     }
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "^7.10.2",
     "@labkey/api": "0.0.45",
     "@labkey/components": "^0.56.3",
     "@types/react": "16.8.19",
@@ -41,22 +41,23 @@
     "react-bootstrap-table": "^4.3.1",
     "react-data-grid": "^7.0.0-canary.16",
     "react-data-grid-addons": "^7.0.0-alpha.24",
-    "react-datepicker": "^2.15.0",
+    "react-datepicker": "^2.16.0",
     "react-dom": "16.8.6",
     "react-moment": "^0.9.7",
     "react-select": "^3.1.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
     "@hot-loader/react-dom": "16.9.0",
     "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
-    "@types/react-datepicker": "^2.11.0",
+    "@types/react-datepicker": "^2.11.1",
     "@types/react-hot-loader": "4.1.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -75,6 +76,7 @@
     "mini-css-extract-plugin": "0.7.0",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
+    "prettier": "^2.0.5",
     "react-bootstrap": "0.33.1",
     "react-hot-loader": "4.8.8",
     "react-test-renderer": "16.9.0",
