--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -8,8 +8,10 @@
     "start": "better-npm-run build:watch",
     "build-prod": "npm run build",
     "clean": "better-npm-run clean",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test jest",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest --runInBand "
   },
+  "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
   "betterScripts": {
     "build:watch": {
       "command": "webpack-dev-server --config webpack/dev.config.js",
@@ -34,7 +36,6 @@
     "@types/react": "16.8.19",
     "@types/react-bootstrap": "0.32.21",
     "@types/react-dom": "16.8.4",
-    "babel-jest": "^25.5.1",
     "immutable": "3.8.2",
     "moment": "^2.26.0",
     "react": "16.8.6",
@@ -56,9 +57,10 @@
     "@babel/preset-react": "7.0.0",
     "@hot-loader/react-dom": "16.9.0",
     "@types/enzyme": "3.10.3",
-    "@types/jest": "24.0.18",
+    "@types/jest": "^25.2.3",
     "@types/react-datepicker": "^2.11.1",
     "@types/react-hot-loader": "4.1.0",
+    "babel-jest": "^26.0.1",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -67,12 +69,13 @@
     "css-loader": "2.1.1",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "enzyme-async-helpers": "^0.9.1",
     "enzyme-to-json": "3.4.0",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.9.0",
-    "jest-cli": "24.9.0",
-    "jest-teamcity-reporter": "0.9.0",
+    "jest": "^26.0.1",
+    "jest-cli": "^26.0.1",
+    "jest-teamcity-reporter": "^0.9.0",
     "mini-css-extract-plugin": "0.7.0",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
@@ -83,9 +86,9 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.1.0",
     "style-loader": "1.0.0",
-    "ts-jest": "24.1.0",
+    "ts-jest": "^26.1.0",
     "ts-loader": "6.0.2",
-    "typescript": "3.1.6",
+    "typescript": "^3.9.5",
     "url-loader": "1.1.2",
     "webpack": "4.33.0",
     "webpack-cli": "3.3.2",
