Fb new animal ui (#243)
* New UI for adding new animals to EHR 1. Added react-bootstrap to module 2. Added react-select to module 3. Added NewAnimalPage (React based UI) to module 4. Multiple webpack configuration changes 5. Created promise wrapper for LABKEY.Query.selectRows()

* Work in progress:
-downgradded react-bootstrap to ver. 3
- Added AcquisitionPanel
- some styling

* Revert "Work in progress:"

This reverts commit 4edb376f78a0eecda2cdcad49a54ea18ccde47e7.

* Work in progress:
- Downgraded react-bootstrap to ver. 0.33.1
- Added Acquisition panel
- some styling
- added @labkey/components to module

* Work in progress:
- Downgraded react-bootstrap to ver. 0.33.1
- Added and styled react-datepicker
- Added Acquisition,Demographics,Location,and Species panels
- some styling
- added @labkey/components to module
- added actions for fetching data from AcquisitionTypes, Locations, PotentialDams, and PotentialSires
- updated .gitignore
- tweaked webpack

* 20200512-potentialDams

* Merging server changes (#233)

* snprc DefaultValidIACUC (#231)

ETL for valid default IACUC

* Change checkout location from optionalModules to server/modules

* Change the gradle task and reference paths to refer to the preferred server/modules checkout location

Co-authored-by: Trey Chadick <tchad@labkey.com>

Co-authored-by: srouseTxbiomed <srouse@txbiomed.org>
Co-authored-by: labkey-ians <labkey-ians@users.noreply.github.com>
Co-authored-by: Trey Chadick <tchad@labkey.com>

* New dev for New Animal Wizard

* Adding validation to components - work in progress

* styling and workflow changes - work in progress

* additional style and workflow changes - work in progress

* New dev - work in progress

* Added unit tests - work in progress

* Merge bug fixes into feature branch (#241)

* snprc DefaultValidIACUC (#231)

ETL for valid default IACUC

* Change checkout location from optionalModules to server/modules

* Change 

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,13 @@ app
 /snprc_scheduler/resources/web/snprc_scheduler/app
 snprc_scheduler/resources/web/snprc_scheduler/app/app.js
 *.iml
-/snprc_ehr/resources/web/gen
+*packageExport*.snd.xml
+snprc_ehr/resources/views/HelloApp*.*
+snprc_ehr/resources/views/helloWorld*.*
+snprc_ehr/resources/views/NewAnimalPage*.*
+snprc_ehr/cmd-here.exe
+snprc_ehr/resources/referenceStudy/*.xlsx
+snprc_ehr/resources/web/snprc_ehr/snprcReports.js.gz
+snprc_ehr/resources/web/snprc_ehr/gen/*
+snprc_mobile
+/snprc_ehr.2020*.zip
