--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -8,8 +8,11 @@
     "start": "better-npm-run build:watch",
     "build-prod": "npm run build",
     "clean": "better-npm-run clean",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test jest",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest --runInBand",
+    "teamcity": "better-npm-run build:jest-teamcity"
   },
+  "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
   "betterScripts": {
     "build:watch": {
       "command": "webpack-dev-server --config webpack/dev.config.js",
@@ -25,29 +28,46 @@
     },
     "clean": {
       "command": "rimraf resources/web/snprc_ehr/gen"
+    },
+    "build:jest-teamcity": {
+      "command": "jest --testResultsProcessor=jest-teamcity-reporter",
+      "env": {
+        "NODE_ENV": "test"
+      }
     }
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "@labkey/api": "0.0.45",
+    "@labkey/components": "^0.56.3",
     "@types/react": "16.8.19",
-    "@types/react-bootstrap": "0.32.19",
+    "@types/react-bootstrap": "0.32.21",
     "@types/react-dom": "16.8.4",
-    "babel-jest": "^25.5.1",
     "immutable": "3.8.2",
+    "moment": "^2.26.0",
     "react": "16.8.6",
-    "react-bootstrap": "0.32.4",
-    "react-dom": "16.8.6"
+    "react-bootstrap-table": "^4.3.1",
+    "react-data-grid": "^7.0.0-canary.16",
+    "react-data-grid-addons": "^7.0.0-alpha.24",
+    "react-datepicker": "^2.16.0",
+    "react-dom": "16.8.6",
+    "react-moment": "^0.9.7",
+    "react-select": "^3.1.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
     "@hot-loader/react-dom": "16.9.0",
     "@types/enzyme": "3.10.3",
-    "@types/jest": "24.0.18",
+    "@types/jest": "^25.2.3",
+    "@types/react-datepicker": "^2.11.1",
     "@types/react-hot-loader": "4.1.0",
+    "babel-jest": "^26.0.1",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -56,23 +76,26 @@
     "css-loader": "2.1.1",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "enzyme-async-helpers": "^0.9.1",
     "enzyme-to-json": "3.4.0",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.9.0",
-    "jest-cli": "24.9.0",
-    "jest-teamcity-reporter": "0.9.0",
+    "jest": "^26.0.1",
+    "jest-cli": "^26.0.1",
+    "jest-teamcity-reporter": "^0.9.0",
     "mini-css-extract-plugin": "0.7.0",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
+    "prettier": "^2.0.5",
+    "react-bootstrap": "0.33.1",
     "react-hot-loader": "4.8.8",
     "react-test-renderer": "16.9.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.1.0",
     "style-loader": "1.0.0",
-    "ts-jest": "24.1.0",
+    "ts-jest": "^26.1.0",
     "ts-loader": "6.0.2",
-    "typescript": "3.1.6",
+    "typescript": "^3.9.5",
     "url-loader": "1.1.2",
     "webpack": "4.33.0",
     "webpack-cli": "3.3.2",
