--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ snprc_ehr/resources/web/snprc_ehr/snprcReports.js.gz
 snprc_ehr/resources/web/snprc_ehr/gen/*
 snprc_mobile
 /snprc_ehr.2020*.zip
+/snprc_ehr.2020*.7z
