--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -10,7 +10,9 @@
     "clean": "better-npm-run clean",
     "test": "cross-env NODE_ENV=test jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest --runInBand",
-    "teamcity": "better-npm-run build:jest-teamcity"
+    "teamcity": "better-npm-run build:jest-teamcity",
+    "lint": "better-npm-run lint",
+    "lint-fix": "better-npm-run lint-fix"
   },
   "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
   "betterScripts": {
@@ -34,6 +36,12 @@
       "env": {
         "NODE_ENV": "test"
       }
+    },
+    "lint": {
+      "command": "eslint --ext .jsx,.js src/client/"
+    },
+    "lint-fix": {
+      "command": "eslint --ext .jsx,.js --fix src/client/"
     }
   },
   "dependencies": {
@@ -67,6 +75,7 @@
     "@types/jest": "^25.2.3",
     "@types/react-datepicker": "^2.11.1",
     "@types/react-hot-loader": "4.1.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -78,6 +87,13 @@
     "enzyme-adapter-react-16": "1.15.2",
     "enzyme-async-helpers": "^0.9.1",
     "enzyme-to-json": "3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "jest": "^26.0.1",
