1. added SSRSReportFolder configuration to snprc_ehr module 2. print to PDF using SSRS added to New Animal Wizard 3. updated line endings for linting 4. added global var LABKEY to eslint config

--- a/snprc_ehr/.eslintrc
+++ b/snprc_ehr/.eslintrc
@@ -29,7 +29,8 @@
   },
   "globals": {
     "__DEV__": true,
-    "React$Element": true
+    "React$Element": true,
+    "LABKEY": "readonly"
   },
   "rules": {
     "arrow-body-style": 0,
