--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ snprc_scheduler/resources/web/snprc_scheduler/app/app.js
 snprc_ehr/resources/views/HelloApp*.*
 snprc_ehr/resources/views/helloWorld*.*
 snprc_ehr/resources/views/NewAnimalPage*.*
+snprc_ehr/resources/views/BirthRecordReport*.*
 snprc_ehr/cmd-here.exe
 snprc_ehr/resources/referenceStudy/*.xlsx
 snprc_ehr/resources/web/snprc_ehr/snprcReports.js.gz
@@ -22,3 +23,5 @@ snprc_ehr/resources/web/snprc_ehr/gen/*
 snprc_mobile
 /snprc_ehr.2020*.zip
 /snprc_ehr.2020*.7z
+/snprc_ehr/.editorconfig
+/snprc_ehr/cmd-here.exe
