--- a/snprc_ehr/.vscode/settings.json
+++ b/snprc_ehr/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "java.autobuild.enabled": false,
-    "files.eol": "\n"
+    "files.eol": "\n",
+    // "editor.defaultFormatter": "esbenp.prettier-vscode",
+    // "[javascript]": {
+    //   "editor.defaultFormatter": "esbenp.prettier-vscode"
+    // }
 }
