--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -69,11 +69,14 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.13",
     "@types/jsdom": "^16.2.4",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-bootstrap": "^0.32.22",
     "@types/react-datepicker": "^2.11.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^3.0.23",
+    "@types/react-select": "^3.0.20",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
