1. added source location to New Animal Wizard UI - AcquisitionPanel.jsx 2. changed how ehr_lookups.source is being populated - went from TSV    file to ETL 3. added source query for source locations -    labkey_etl.v_sourceLocations 4. added location description to lookup list 5. added sourceLocation to the updateAnimalData.js API 6. added sourceLocation to SummaryPanel.jsx - also tweaked hover text    locations 7. added sourceLocation to default state - NewAnimalState.js 8. added sourceLocation jest tests, test data, mock API 9. updated snapshots 10. many lint fixes including files outside the scope of this feature     branch

--- a/snprc_ehr/.eslintrc
+++ b/snprc_ehr/.eslintrc
@@ -33,6 +33,7 @@
     "LABKEY": "readonly"
   },
   "rules": {
+    "linebreak-style": ["error", "windows"],
     "arrow-body-style": 0,
     "arrow-parens": [
       "warn",
