NewAnimalWizard should allow bulk ID creation for non-primate species

--- a/snprc_ehr/tsconfig.json
+++ b/snprc_ehr/tsconfig.json
@@ -11,8 +11,14 @@
                               /* Specify library files to be included in the compilation. */
     "allowJs": true
   },
+  "include": [
+    "src/client/**/*"
+  ],
   "exclude": [
-    "resources"
+    "resources",
+    "node_modules",
+    "dist",
+    "build"
   ]
 }
 
