Add Assignment at Time, Age Class at Time to SNPRC_EHRCustomizer (#465)
* modified species code column name for species table in ageclass query

* added code for calculated columns in snprc customizer

* added AssignmentAtTimeForeignKey class to SNPRC table package

* refactored code and added new classes for calculating new columns

* refactored code for building customizer columns that are calculated

* refactored code and added comments

* refactored code and added comments

* removed project values from assignment query

* moved object class files to domain package

* moved clases to appropriate package structures

* code refactoring for query foreign key

* Added exception to the NewAnimalWizard potential sires query to allow marmosets in the Senior AgeClass to be selected as potential sires. (#467)

* refactored CalculatedColumn code to account for multiple use cases with lookup tables

* refactored CalculatedColumn code to account for multiple use cases with lookup tables

* Remove Menses Tab from Animal History - Reproductive Management (#469)

* removed menses line from reports.tsv

* changed VI column to VB in cycle daily table view

* modified species code column name for species table in ageclass query

* added code for calculated columns in snprc customizer

* added AssignmentAtTimeForeignKey class to SNPRC table package

* refactored code and added new classes for calculating new columns

* refactored code for building customizer columns that are calculated

* refactored code and added comments

* refactored code and added comments

* removed project values from assignment query

* moved object class files to domain package

* moved clases to appropriate package structures

* code refactoring for query foreign key

* refactored CalculatedColumn code to account for multiple use cases with lookup tables

* refactored CalculatedColumn code to account for multiple use cases with lookup tables

* r

--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -13,4 +13,9 @@ dependencies
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "published", depExtension: "module")
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:dataintegration", depProjectConfig: "published", depExtension: "module")
             BuildUtils.addLabKeyDependency(project: project, config: "modules", depProjectPath: ":server:modules:snd", depProjectConfig: "published", depExtension: "module")
+
+            external "org.apache.commons:commons-text:1.9"
+            compileOnly "org.projectlombok:lombok:1.18.22"
+            annotationProcessor "org.projectlombok:lombok:1.18.22"
+
         }
