--- a/snprc_ehr/build.gradle
+++ b/snprc_ehr/build.gradle
@@ -1,4 +1,5 @@
 import org.labkey.gradle.util.BuildUtils
+import org.labkey.gradle.util.ExternalDependency
 
 dependencies
         {
@@ -19,4 +20,16 @@ dependencies
             compileOnly "org.projectlombok:lombok:1.18.22"
             annotationProcessor "org.projectlombok:lombok:1.18.22"
 
+            BuildUtils.addExternalDependency(
+                project,
+                new ExternalDependency(
+                    "org.apache.commons:commons-text:1.9",
+                    "Commons Text",
+                    "Apache",
+                    "https://commons.apache.org/proper/commons-text/",
+                    ExternalDependency.APACHE_2_LICENSE_NAME,
+                    ExternalDependency.APACHE_2_LICENSE_URL,
+                    "String algorithms",
+                )
+            )
         }
