-Added remarks to clinpathRunsAll so they can be displayed in the clinical history -Fixed issue sorting test results within panels -Grouped all labwork results into the Labwork category -Added JavaScript trigger for taqmanResults to insert objectId per row -Fixed Urinalysis TableTitle in metadata -Removed unused table from datasets_manifest.xml -Removed ObjectId from TaqmanResults configuration in favor of shared configuration -Code cleanup in p_load_hl7_data.sql -updated .gitignore to ignore generated credits

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ snprc_ehr/.editorconfig
 snprc_ehr/resources/referenceStudy/LoadTaqmanData
 snprc_ehr/resources/referenceStudy/datasetImport/LoadTaqmanData
 snprc_scheduler/.gradle
+snprc_ehr/resources/credits
+
