--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ app
 *.iml
 *packageExport*.snd.xml
 snprc_ehr/.gradle
+snprc_ehr/resources/web/gen
 snprc_ehr/resources/views/gen
 snprc_ehr/resources/views/HelloApp*.*
 snprc_ehr/resources/views/helloWorld*.*
@@ -35,3 +36,7 @@ snprc_scheduler/.gradle
 snprc_ehr/resources/credits
 */resources/credits/dependencies.txt
 */resources/credits/jars.txt
+
+# generated artifacts
+resources/web/gen
+resources/views/gen
