--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -32,7 +32,7 @@
     "react-select": "^3.1.0"
   },
   "devDependencies": {
-    "@labkey/build": "^6.12.0",
+    "@labkey/build": "6.12.0-fb-build-jsx.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
