changed testRegex back to previous version

--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -74,7 +74,7 @@
       "\\.(scss)$": "<rootDir>/test/styleMock.ts"
     },
     "testEnvironment": "jsdom",
-    "testRegex": "(\\.(test|spec))\\.(ts|tsx?)$",
+    "testRegex": "(\\.(test|spec))\\.([jt]sx?)$",
     "testResultsProcessor": "jest-teamcity-reporter",
     "transform": {
       "^.+\\.tsx?$": [
